웹뷰 추가, 이미지 모듈 이미지 한 장 혹은 여러 장 일 때도 원본 비율 유지 되도록 수정, 몇 몇 버그 수정, 복사 지 사용 매수 보여주도록 수정 등
구글 독스 관련 기능은 참조가 불가능 해서 주석 처리

운영자님 정말 사랑합니다 진심 존경합니다 by Real 정우

--- a/Duty Tjssm/Duty Tjssm.csproj
+++ b/Duty Tjssm/Duty Tjssm.csproj
@@ -121,21 +121,12 @@
   <ItemGroup>
     <Resource Include="Resource\1.png" />
     <Resource Include="Resource\2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\rotate.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\noImg.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\roatate2.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resource\roatate2crop.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resource\dutyBG.png" />
+    <Resource Include="Resource\Noimage.png" />
+    <Resource Include="Resource\noImg.png" />
+    <Resource Include="Resource\roatate2.png" />
+    <Resource Include="Resource\roatate2crop.png" />
+    <Resource Include="Resource\rotate.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
